@@ -74,3 +74,5 @@
 	playout of single channel streams to be incorrect.
 2016-01-15 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented sample-rate conversion in the ALSA audio device.
+2016-01-15 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented PLL samplerate adaptation in the ALSA audio device.
